Fix formatting of snapshot date times

--- a/app/views/snapshots/index.html.haml
+++ b/app/views/snapshots/index.html.haml
@@ -1,3 +1,4 @@
+%h1 Snapshots
 %ul
   - @snapshots.each do |snapshot|
-    %li= link_to "Snapshot #{snapshot.created_at}", snapshot_path(snapshot)
+    %li= link_to "#{l snapshot.begins_at, format: :human} - #{l snapshot.ends_at, format: :human}", snapshot_path(snapshot)
