Turn off turbo links for the large image pages
Didn't give user indication that page was loading

--- a/app/views/snapshots/show.html.haml
+++ b/app/views/snapshots/show.html.haml
@@ -1,4 +1,4 @@
-.floating-header
+.floating-header{"data-no-turbolink" => ""}
   %h1.area= @area.humanize
   .change_area
     - if @area == "manhattan"
