--- a/app/views/mockups/paths.html.haml
+++ b/app/views/mockups/paths.html.haml
@@ -45,9 +45,9 @@
         selection = null;
       }
 
-      project.activeLayer.selected = false;
+      // project.activeLayer.selected = false;
       if (event.item) {
-        event.item.selected = true;
+        // event.item.selected = true;
         event.item.fillColor = 'purple';
         selection = event.item;
       }
