--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
     %title= content_for?(:title) ? yield(:title) : "NewTweetCity"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
