--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -1,5 +1,10 @@
-%h2= @borough.titleize
-%canvas#borough.background{resize: true}
+- content_for :top do
+  %h2= @borough.titleize
+
+%canvas#borough.hood.span8
+.span7
+%ul.tweets.span4
+  = render partial: 'tweet', collection: @tweets
 
 :javascript
   NTC.hoodsToLoad = [
