--- a/app/views/hoods/show.html.haml
+++ b/app/views/hoods/show.html.haml
@@ -1,14 +1,11 @@
-%h1= @neighborhood.name
-%h4= link_to "Other Hoods", hoods_path
-%ul
-  - @tweets.each do |tweet|
-    %li{class: "tweet_#{tweet.id}"}
-      .text= Rinku.auto_link(tweet.text).html_safe
-      - if tweet.media_url
-        .media= image_tag tweet.media_url
-      .date= tweet.created_at
+- content_for :top do
+  %h1= @neighborhood.name
+  %h4= link_to "Other Hoods", hoods_path
 
-%canvas#hood.background{resize: true}
+%canvas#hood.hood.span7
+.span7
+%ul.tweets.span4
+  = render partial: 'boroughs/tweet', collection: @tweets
 
 :javascript
   var json_path = "#{@neighborhood.slug}";
