--- a/app/views/boroughs/_tweet.html.haml
+++ b/app/views/boroughs/_tweet.html.haml
@@ -2,6 +2,6 @@
   .neighborhood.label= tweet.neighborhood.name
   .date.text-success #{l(tweet.created_at, format: :long)}
   .body
-    %blockquote.text= Rinku.auto_link(tweet.text).html_safe
+    %blockquote.text= Rinku.auto_link(tweet.text, :all, 'target="_blank"').html_safe
     - if tweet.media_url
       .media= image_tag tweet.media_url
