--- a/app/views/snapshots/index.html.haml
+++ b/app/views/snapshots/index.html.haml
@@ -1,5 +1,7 @@
+- content_for :top do
+  %h1 #{@area.humanize} Snapshots
+
 .background= image_tag last_snapshot_image(@area)
-%h1 #{@area.humanize} Snapshots
 %ul{"data-no-turbolink" => ""}
   - @snapshots.each do |snapshot|
     %li= link_to "#{l snapshot.begins_at, format: :human} - #{l snapshot.ends_at, format: :human}", snapshot_path(@area, snapshot)
