Flash the hood blue when it produces a tweet
[Finishes #54833852]

--- a/app/views/boroughs/_tweet.html.haml
+++ b/app/views/boroughs/_tweet.html.haml
@@ -1,4 +1,5 @@
 %li{class: ["tweet", "tweet_#{tweet.id}"]}
+  %i{class: %w(icon-twitter)}
   .neighborhood.label= tweet.neighborhood.name
   .date.label.label-success #{l(tweet.created_at, format: :long)}
   .body
