--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
+          %h6.home= link_to "NEW TWEET CITY HOME", root_path
           = yield :top
     .container
       .row
