--- a/app/assets/stylesheets/hoods.css.scss
+++ b/app/assets/stylesheets/hoods.css.scss
@@ -1,17 +1,12 @@
 .hoods {
+  table {
+    margin-top: 60px;
+  }
+}
+
+.hoods.show .navbar {
   h1, h4 {
     display: inline-block;
-  }
-
-  ul {
-    background-color: rgba(255, 255, 255, 0.9);
-  }
-
-  li .text {
-    font-size: 20px;
-  }
-
-  li .date {
-    margin-bottom: 20px;
+    margin: 10px;
   }
 }
