Style screen_name and profile image for tweets

--- a/app/assets/stylesheets/boroughs.css.scss
+++ b/app/assets/stylesheets/boroughs.css.scss
@@ -1,7 +1,9 @@
 .boroughs.show {
-  h2, h5 {
-    display: inline-block;
-    margin: 10px;
+  .navbar {
+    h2, h5 {
+      display: inline-block;
+      margin: 10px;
+    }
   }
 }
 
