--- a/app/views/boroughs/_tweet.html.haml
+++ b/app/views/boroughs/_tweet.html.haml
@@ -3,6 +3,10 @@
   .neighborhood.label.label-info= tweet.neighborhood.name
   .date.label.label-success #{l(tweet.created_at, format: :long)}
   .body
-    %blockquote.text= Rinku.auto_link(tweet.text, :all, 'target="_blank"').html_safe
-    - if tweet.media_url
-      .media= image_tag tweet.media_url
+    = image_tag tweet.profile_image_url, class: 'profile_image'
+    .content
+      %blockquote.text
+        %h5.screen_name= link_to "@#{tweet.screen_name}", "http://www.twitter.com/#{tweet.screen_name}"
+        = Rinku.auto_link(tweet.text, :all, 'target="_blank"').html_safe
+      - if tweet.media_url
+        .media= image_tag tweet.media_url
