--- a/app/views/snapshots/show.html.haml
+++ b/app/views/snapshots/show.html.haml
@@ -1,7 +1,7 @@
 - content_for :top do
   %h1.area= @area.humanize
 
-.holder
+.absolute
   .floating-header{"data-no-turbolink" => ""}
     .change_area
       - if @area == "manhattan"
