--- a/app/views/boroughs/_tweet.html.haml
+++ b/app/views/boroughs/_tweet.html.haml
@@ -6,7 +6,7 @@
     = image_tag tweet.profile_image_url, class: 'profile_image'
     .content
       %blockquote.text
-        %h5.screen_name= link_to "@#{tweet.screen_name}", "http://www.twitter.com/#{tweet.screen_name}"
+        %h5.screen_name= link_to "@#{tweet.screen_name}", "http://www.twitter.com/#{tweet.screen_name}", target: "_blank"
         = Rinku.auto_link(tweet.text, :all, 'target="_blank"').html_safe
       - if tweet.media_url
         .media= image_tag tweet.media_url
