--- a/app/assets/stylesheets/snapshot.css.scss
+++ b/app/assets/stylesheets/snapshot.css.scss
@@ -1,27 +1,34 @@
-.floating-header {
-  position: relative;
-  background-color: rgba(255,255,255,0.5);
-}
-
-.background {
-  position: fixed;
-  top: 0;
-  z-index: -1;
-}
-
-.snapshots {
+.snapshots.show {
   > .container {
-    margin-top: 70px;
-
     img {
-      max-height: 90%;
+      /*max-height: 90%;*/
     }
+  }
+
+  .floating-header {
+    position: relative;
+    background-color: rgba(255,255,255,0.5);
+  }
+
+  .navbar {
+    h1, .change_area {
+      display: inline-block;
+
+      a {
+        margin: 0 10px;
+      }
+    }
+  }
+
+  .background {
+    position: fixed;
+    top: 0;
+    z-index: -1;
   }
 }
 
 .snapshots.index {
   ul, ol {
-    margin-top: 80px;
     display: inline-block;
 
     li {
