Tweet partial now links to relevant neighborhood

--- a/app/views/hoods/show.html.haml
+++ b/app/views/hoods/show.html.haml
@@ -1,5 +1,6 @@
 - content_for :top do
   %h1= @neighborhood.name
+  %h4= link_to @neighborhood.borough, borough_path(@neighborhood.borough)
   %h4= link_to "Other Hoods", hoods_path
 
 .hood
