--- a/app/views/boroughs/_tweet.html.haml
+++ b/app/views/boroughs/_tweet.html.haml
@@ -1,6 +1,6 @@
 %li{class: ["tweet", "tweet_#{tweet.id}"]}
   %i{class: %w(icon-twitter)}
-  .neighborhood.label.label-info= tweet.neighborhood.name
+  .neighborhood.label.label-info= link_to tweet.neighborhood.name, hood_path(tweet.neighborhood)
   .date.label.label-success #{l(tweet.created_at, format: :long)}
   .body
     = image_tag tweet.profile_image_url, class: 'profile_image'
