--- a/app/assets/stylesheets/boroughs.css.scss
+++ b/app/assets/stylesheets/boroughs.css.scss
@@ -7,17 +7,22 @@
   }
 
   .absolute {
-    top: 70px;
     height: 100%;
-    z-index: -1;
-    overflow-x: hidden;
+    width: 720px;
+    margin-left: -70px;
+    /*z-index: -1;*/
+    overflow: hidden;
 
     canvas {
       height: 100%;
+      overflow-x: hidden;
     }
   }
 
   .tweets {
     margin-left: 640px;
+    ul {
+      overflow-y: hidden;
+    }
   }
 }
