Add "Fork me on github" ribbon to home page

--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -19,6 +19,10 @@
     = javascript_include_tag "application"
 
   %body{class: controller_and_action}
+    .github-fork-ribbon-wrapper.right
+      .github-fork-ribbon
+        %a{:href => "https://github.com/dimroc/new_tweet_city"} Fork me on GitHub
+
     .container
       .row
         .span12
