--- a/app/views/snapshots/show.html.haml
+++ b/app/views/snapshots/show.html.haml
@@ -1,12 +1,11 @@
 - content_for :top do
-  %h1.area= @area.humanize
-  .change_area
-    - if @area == "manhattan"
-      = link_to "List of Manhattan Snapshots", snapshots_path(:manhattan)
-      = link_to "Switch to all NYC", last_snapshots_path(:nyc)
-    - else
-      = link_to "List of NYC Snapshots", snapshots_path(:nyc)
-      = link_to "Switch to Manhattan", last_snapshots_path(:manhattan)
+  %li.active= link_to @area.upcase
+  - if @area == "manhattan"
+    %li= link_to "List of Manhattan Snapshots", snapshots_path(:manhattan)
+    %li= link_to "Switch to all NYC", last_snapshots_path(:nyc)
+  - else
+    %li= link_to "List of NYC Snapshots", snapshots_path(:nyc)
+    %li= link_to "Switch to Manhattan", last_snapshots_path(:manhattan)
 
 
 .absolute
