--- a/app/assets/stylesheets/snapshot.css.scss
+++ b/app/assets/stylesheets/snapshot.css.scss
@@ -28,18 +28,20 @@
 }
 
 .snapshots.index {
-  ul, ol {
-    display: inline-block;
+  .absolute {
+    ul, ol {
+      display: inline-block;
 
-    li {
-      border: solid 1px #ccc;
-      background-color: rgba(255,255,255,0.9);
-      margin: 5px;
-      padding: 10px;
-    }
+      li {
+        border: solid 1px #ccc;
+        background-color: rgba(255,255,255,0.9);
+        margin: 5px;
+        padding: 10px;
+      }
 
-    li:first-child {
-      background-color: rgba(160,160,160,0.8);
+      li:first-child {
+        background-color: rgba(160,160,160,0.8);
+      }
     }
   }
 }
