--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -1,7 +1,7 @@
 - content_for :top do
-  %h2= @borough.titleize
-  - (Borough::NAMES - [@borough]).each do |borough|
-    %h5= link_to borough, borough_path(borough.downcase)
+  - Borough::NAMES.each do |borough|
+    - klass = (borough == @borough) ? "active" : ""
+    %li{class: klass}= link_to borough, borough_path(borough.downcase)
 
 .absolute
   %canvas#borough.relative
