--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,10 @@
             %ul.nav
               = yield :top
 
+    .github-fork-ribbon-wrapper.right
+      .github-fork-ribbon
+        %a{:href => "https://github.com/dimroc/new_tweet_city"} Fork me on GitHub
+
     .container
       .row
         .span12
