--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -5,7 +5,7 @@
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
-    %title= content_for?(:title) ? yield(:title) : "NewTweetCity"
+    %title= content_for?(:title) ? yield(:title) : "dimroc"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -17,12 +17,9 @@
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "application"
+    = javascript_include_tag "three"
 
   %body{class: controller_and_action}
-    .github-fork-ribbon-wrapper.right
-      .github-fork-ribbon
-        %a{:href => "https://github.com/dimroc/new_tweet_city"} Fork me on GitHub
-
     .container
       .row
         .span12
