Clean up unused html on home

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,9 +3,8 @@
 %ul.span12
   %li.webgl
     = link_to "http://dimroc.github.io/reveal.js-threejs/", target: "_blank" do
-      %h2 WebGL with Three JS slides
+      %h2 WebGL with Three JS Slides
       %canvas#webgl
-      %canvas#webgl2
   %li.snapshots
     = link_to last_snapshots_path("manhattan"), target: "_blank" do
       %h2 Tweets as Pixels
