Borough names is now a method as opposed to a constant
prevents connection to DB when compiling assets

--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :top do
-  - Borough::NAMES.each do |borough|
+  - Borough.names.each do |borough|
     - klass = (borough == @borough) ? "active" : ""
     %li{class: klass}= link_to borough, borough_path(borough.downcase)
 
