--- a/app/views/snapshots/show.html.haml
+++ b/app/views/snapshots/show.html.haml
@@ -6,6 +6,7 @@
   - else
     %li= link_to "List of NYC Snapshots", snapshots_path(:nyc)
     %li= link_to "Switch to Manhattan", last_snapshots_path(:manhattan)
+  %li= link_to "Inspired by Miguel Rios' Geography of Tweets", "https://blog.twitter.com/2013/geography-tweets-3"
 
 
 .absolute
