--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
             %ul.nav
               = yield :top
 
-    .github-fork-ribbon-wrapper.right
+    .github-fork-ribbon-wrapper.right-bottom
       .github-fork-ribbon
         %a{:href => "https://github.com/dimroc/new_tweet_city"} Fork me on GitHub
 
