Add hashtags page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,6 +2,9 @@
 %h4 More at <a href="http://www.dimroc.com">dimroc.com</a>
 
 %ul.span12
+  %li.hashtags
+    = link_to hashtags_path do
+      %h2 Trending in NYC - Hashtag Analytics
   %li.snapshots
     = link_to last_snapshots_path("manhattan") do
       %h2 Tweets as Pixels
