Fix hashtag index page styling and ordering

--- a/app/views/hashtags/index.html.haml
+++ b/app/views/hashtags/index.html.haml
@@ -1,8 +1,8 @@
 %table.table.table-bordered
-  %th
-    %td Period
+  %tr
+    %th Period
     - Borough.names.each do |borough|
-      %td= borough
+      %th= borough
   %tr
     %td Hour
     - Borough.names.each do |borough|
