turn off turbolinks on home page

--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -24,7 +24,7 @@
       .github-fork-ribbon
         %a{:href => "https://github.com/dimroc/new_tweet_city"} Fork me on GitHub
 
-    .container
+    .container{'data-no-turbolink' => ""}
       .row
         .span12
           = bootstrap_flash
