--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "http://js.pusher.com/2.1/pusher.min.js"
     = javascript_include_tag "application"
+    = yield(:head)
 
   %body{class: controller_and_action}
     .navbar.navbar-inverse{"data-no-turbolink" => ""}
