--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -1,10 +1,11 @@
 - top do
   - Borough.names.each do |borough|
     - klass = (borough == @borough) ? "active" : ""
-    %li{class: klass}= link_to borough, borough_path(borough.downcase)
+    - media_params = @only_media ? {only_media: true} : {}
+    %li{class: klass}= link_to borough, borough_path(borough.downcase, media_params)
 
-  - all_tweets_class = params[:only_media] ? "" : "active"
-  - only_media_class = params[:only_media] ? "active" : ""
+  - all_tweets_class = @only_media ? "" : "active"
+  - only_media_class = @only_media ? "active" : ""
   %li{class: all_tweets_class}
     = link_to "All Tweets", borough_path(@borough)
   %li{class: only_media_class}
@@ -25,5 +26,5 @@
 
   NTC.Loader.loadHoods(NTC.hoodsToLoad).done(function(hoods) {
     NTC.Renderer.drawHoods(hoods, 'borough');
-    NTC.Listener.listenToTweets('.tweets ul', hoods, '#{params[:only_media]}');
+    NTC.Listener.listenToTweets('.tweets ul', hoods, '#{@only_media}');
   });
