--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -26,5 +26,5 @@
 
   NTC.Loader.loadHoods(NTC.hoodsToLoad).done(function(hoods) {
     NTC.Renderer.drawHoods(hoods, 'borough');
-    NTC.Listener.listenToTweets('.tweets ul', hoods, '#{@only_media}');
+    NTC.Listener.listenToTweets('.tweets ul', '#{@borough}', hoods, '#{@only_media}');
   });
