Add FrequenciesController and store results in hidden input

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,6 +3,9 @@
 
 %ul.span12
   %li.hashtags
+    = link_to frequency_path("manhattan") do
+      %h2 Popularity of Terms by Neighborhood
+  %li.hashtags
     = link_to hashtags_path do
       %h2 Trending in NYC - Hashtag Analytics
   %li.snapshots
