Render frequency counts on manhattan map using ES to count terms

--- a/app/assets/stylesheets/frequencies.css.scss
+++ b/app/assets/stylesheets/frequencies.css.scss
@@ -5,7 +5,9 @@
 
   canvas.hoods {
     height: 800px;
-    width: 500px;
+    width: 800px;
+    margin-left: 30%;
+    margin-right: 30%;
   }
 
   .mouse-tail {
