--- a/app/views/snapshots/index.html.haml
+++ b/app/views/snapshots/index.html.haml
@@ -9,4 +9,4 @@
     - @snapshots.each do |snapshot|
       %li= link_to "#{l snapshot.begins_at, format: :human} - #{l snapshot.ends_at, format: :human}", snapshot_path(@area, snapshot)
 
-.span12= image_tag last_snapshot_image(@area)
+.span12= image_tag last_snapshot_image(@area), class: "snapshot"
