--- a/app/assets/stylesheets/snapshot.css.scss
+++ b/app/assets/stylesheets/snapshot.css.scss
@@ -1,7 +1,7 @@
 .snapshots.show {
   > .container {
     img {
-      max-height: 90%;
+      max-height: 1024px;
     }
   }
 
@@ -30,7 +30,7 @@
 .snapshots.index {
   > .container {
     img {
-      max-height: 90%;
+      max-height: 1024px;
     }
   }
 
