--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,6 @@
 %h1 New Tweet City
-%h4 More at <a href="http://www.dimroc.com">dimroc.com</a>
+%h4 More at <a href="http://experiments.dimroc.com">experiments.dimroc.com</a>
+%h4 Read details at <a href="http://www.dimroc.com">www.dimroc.com</a>
 
 %ul.span12
   %li.boroughs
