Improve css style for mobile

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -4,8 +4,10 @@
   float: right;
 }
 
-.absolute {
-  position: absolute;
+.drawing-holder {
+  @media(min-width: $screen-sm-min) {
+    position: absolute;
+  }
 }
 
 .fixed {
