--- a/app/views/boroughs/show.html.haml
+++ b/app/views/boroughs/show.html.haml
@@ -11,7 +11,7 @@
   %li{class: only_media_class}
     = link_to "Only Media", borough_path(@borough, only_media: true)
 
-.absolute
+.drawing-holder
   %canvas#borough.relative
 
 .tweets
