--- a/app/views/snapshots/show.html.haml
+++ b/app/views/snapshots/show.html.haml
@@ -9,7 +9,7 @@
   %li= link_to "Inspired by Miguel Rios' Geography of Tweets", "https://blog.twitter.com/2013/geography-tweets-3"
 
 
-.absolute
+.drawing-holder
   .floating-header{"data-no-turbolink" => ""}
     .begins From: #{l @snapshot.begins_at, format: :human}
     .ends Until : #{l @snapshot.ends_at, format: :human}
