--- a/app/assets/stylesheets/boroughs.css.scss
+++ b/app/assets/stylesheets/boroughs.css.scss
@@ -6,7 +6,7 @@
     }
   }
 
-  .absolute {
+  .drawing-holder {
     height: 100%;
     width: 720px;
     margin-left: -70px;
@@ -17,10 +17,20 @@
       height: 100%;
       overflow-x: hidden;
     }
+
+    @media(max-width: $screen-sm-min) {
+      width: 100%;
+      margin: auto;
+      text-align: center;
+      pointer-events: none;
+    }
   }
 
   .tweets {
-    margin-left: 640px;
+    @media(min-width: $screen-sm-min) {
+      margin-left: 640px;
+    }
+
     ul {
       overflow-y: hidden;
     }
