Paper js ignores mouse events on mobile

--- a/app/assets/stylesheets/tweet.css.scss
+++ b/app/assets/stylesheets/tweet.css.scss
@@ -26,6 +26,10 @@
   .content {
     display: inline-block;
     width: 370px;
+
+    @media(max-width: $screen-sm-min) {
+      width: 100%;
+    }
   }
 
   .body {
